# pinn-qpinn

./: CMakeLists.txt  README.md  pinns_d3.py  requirements.txt  setup.py
include/: crossover.hpp  individual.hpp  rcga_optimizer.hpp  selection.hpp
module/nsga2_optimizer/: CMakeLists.txt  setup.py
module/nsga2_optimizer/include/: nsga2_optimizer.hpp
module/nsga2_optimizer/src/: nsga2_optimizer.cpp  python_bindings.cpp
module/rcga_optimizer/include/: fitness_evaluator.hpp
module/rcga_optimizer/src/: python_bindings.cpp  rcga_optimizer.cpp  rex_crossover.cpp
results/: gqe_circuit_info.json  gqe_circuit_latex.tex  gqe_circuit_summary.txt
results/quantum_circuits/: circuit_info.json
src/: jgg_selection.cpp
